--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,34 @@
                 <!--
                 ...Additional dependencies may be placed here...
                 -->
+
+                <!--服务注册-->
+                <dependency>
+                    <groupId>org.apereo.cas</groupId>
+                    <artifactId>cas-server-support-json-service-registry</artifactId>
+                    <version>${cas.version}</version>
+                </dependency>
+
+                <!--数据库认证相关 start-->
+                <dependency>
+                    <groupId>org.apereo.cas</groupId>
+                    <artifactId>cas-server-support-jdbc-drivers</artifactId>
+                    <version>${cas.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apereo.cas</groupId>
+                    <artifactId>cas-server-support-jdbc</artifactId>
+                    <version>${cas.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                    <version>6.0.6</version>
+                </dependency>
+                <!--数据库认证相关 end-->
+
+
             </dependencies>
         </profile>
 
@@ -143,7 +171,7 @@
                     <plugin>
                         <groupId>com.soebes.maven.plugins</groupId>
                         <artifactId>echo-maven-plugin</artifactId>
-                        <version>0.3.0</version>
+                        <overlayversion>0.3.0</overlayversion>
                         <executions>
                             <execution>
                                 <phase>prepare-package</phase>
